parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     program_opt -> program
Rule 4     program_opt -> empty
Rule 5     empty -> <empty>
Rule 6     statement -> PRINTLN NOT LPAREN STRING RPAREN SEMICOLON
Rule 7     statement -> PRINTLN NOT LPAREN expression RPAREN SEMICOLON
Rule 8     statement -> PRINTLN NOT LPAREN STRING COMMA argument_list RPAREN SEMICOLON
Rule 9     expression -> expression DOT IDENTIFIER LPAREN expression COMMA expression RPAREN
Rule 10    expression -> expression DOT IDENTIFIER LPAREN expression RPAREN
Rule 11    expression -> IDENTIFIER DOUBLE_COLON IDENTIFIER LPAREN RPAREN
Rule 12    statement -> expression SEMICOLON
Rule 13    expression -> expression DOT IDENTIFIER LPAREN arguments_opt RPAREN
Rule 14    arguments_opt -> argument_list
Rule 15    arguments_opt -> empty
Rule 16    argument_list -> argument_list COMMA expression
Rule 17    argument_list -> expression
Rule 18    closure_params -> <empty>
Rule 19    closure_params -> IDENTIFIER
Rule 20    closure_params -> IDENTIFIER COLON type
Rule 21    closure_params -> IDENTIFIER COMMA closure_params
Rule 22    closure_params -> IDENTIFIER COLON type COMMA closure_params
Rule 23    closure_body -> expression
Rule 24    closure_body -> LBRACE closure_block_content RBRACE
Rule 25    closure_block_content -> expression
Rule 26    closure_block_content -> program expression
Rule 27    closure_block_content -> program_opt
Rule 28    expression -> CLOSURE_PIPE closure_params CLOSURE_PIPE closure_body
Rule 29    expression -> CLOSURE_PIPE closure_params CLOSURE_PIPE ARROW type closure_body
Rule 30    expression -> LPAREN expression RPAREN
Rule 31    expression -> expression PLUS expression
Rule 32    expression -> expression MINUS expression
Rule 33    expression -> expression TIMES expression
Rule 34    expression -> expression DIVIDE expression
Rule 35    expression -> expression MOD expression
Rule 36    expression -> expression RANGE expression
Rule 37    expression -> expression RANGE_INCLUSIVE expression
Rule 38    expression -> expression EQUAL_TO expression
Rule 39    expression -> expression NOT_EQUAL expression
Rule 40    expression -> expression LESS_THAN expression
Rule 41    expression -> expression GREATER_THAN expression
Rule 42    expression -> expression LESS_THAN_OR_EQUAL_TO expression
Rule 43    expression -> expression GREATER_THAN_OR_EQUAL_TO expression
Rule 44    expression -> expression CONJUNCTION expression
Rule 45    expression -> expression DISJUNCTION expression
Rule 46    expression -> NOT expression
Rule 47    expression -> MINUS expression
Rule 48    expression -> INTEGER
Rule 49    expression -> FLOAT
Rule 50    expression -> STRING
Rule 51    expression -> CHAR
Rule 52    expression -> BOOLEAN
Rule 53    expression -> IDENTIFIER
Rule 54    expression -> BIT_AND expression
Rule 55    expression -> BIT_AND MUT IDENTIFIER
Rule 56    expression -> expression AS type
Rule 57    condition -> expression EQUAL_TO expression
Rule 58    condition -> expression NOT_EQUAL expression
Rule 59    condition -> expression LESS_THAN expression
Rule 60    condition -> expression GREATER_THAN expression
Rule 61    condition -> expression LESS_THAN_OR_EQUAL_TO expression
Rule 62    condition -> expression GREATER_THAN_OR_EQUAL_TO expression
Rule 63    condition -> condition CONJUNCTION condition
Rule 64    condition -> condition DISJUNCTION condition
Rule 65    condition -> NOT condition
Rule 66    condition -> LPAREN condition RPAREN
Rule 67    condition -> expression
Rule 68    condition -> BOOLEAN
Rule 69    statement -> IF expression LBRACE program_opt RBRACE
Rule 70    statement -> IF expression LBRACE program_opt RBRACE ELSE LBRACE program_opt RBRACE
Rule 71    statement -> IDENTIFIER ASIGNED_TO expression SEMICOLON
Rule 72    statement -> WHILE expression LBRACE program_opt RBRACE
Rule 73    statement -> ASYNC FN function_name LPAREN param_list_opt RPAREN ARROW type LBRACE function_body RBRACE
Rule 74    statement -> ASYNC FN function_name LPAREN param_list_opt RPAREN LBRACE program_opt RBRACE
Rule 75    type -> TYPE_I32
Rule 76    type -> TYPE_U8
Rule 77    type -> TYPE_U16
Rule 78    type -> TYPE_U32
Rule 79    type -> TYPE_U64
Rule 80    type -> TYPE_F64
Rule 81    type -> TYPE_CHAR
Rule 82    type -> TYPE_STRING
Rule 83    type -> TYPE_STR
Rule 84    type -> TYPE_BOOL
Rule 85    type -> TYPE_TUPLE
Rule 86    type -> LBRACKET type RBRACKET
Rule 87    type -> LBRACKET type COMMA INTEGER RBRACKET
Rule 88    type -> BIT_AND type
Rule 89    type -> BIT_AND MUT type
Rule 90    statement -> let_decl
Rule 91    let_decl -> LET maybe_mut IDENTIFIER maybe_type maybe_init SEMICOLON
Rule 92    maybe_mut -> MUT
Rule 93    maybe_mut -> empty
Rule 94    maybe_type -> COLON type
Rule 95    maybe_type -> empty
Rule 96    maybe_init -> ASIGNED_TO expression
Rule 97    maybe_init -> empty
Rule 98    element_list -> element_list COMMA expression
Rule 99    element_list -> expression
Rule 100   expression -> LBRACKET element_list RBRACKET
Rule 101   expression -> LBRACKET expression SEMICOLON INTEGER RBRACKET
Rule 102   expression -> IDENTIFIER LBRACKET expression RBRACKET
Rule 103   expression -> IDENTIFIER LBRACKET INTEGER RANGE INTEGER RBRACKET
Rule 104   expression -> IDENTIFIER LBRACKET INTEGER RANGE_INCLUSIVE INTEGER RBRACKET
Rule 105   expression -> IDENTIFIER NOT LBRACKET element_list RBRACKET
Rule 106   statement -> const_decl
Rule 107   const_decl -> CONST IDENTIFIER COLON type ASIGNED_TO expression SEMICOLON
Rule 108   type -> LPAREN tuple_type_list RPAREN
Rule 109   tuple_type_list -> type
Rule 110   tuple_type_list -> type COMMA tuple_type_list
Rule 111   expression -> LPAREN tuple_value_list RPAREN
Rule 112   tuple_value_list -> expression
Rule 113   tuple_value_list -> expression COMMA tuple_value_list
Rule 114   expression -> expression DOT INTEGER
Rule 115   statement -> FOR IDENTIFIER IN expression LBRACE program_opt RBRACE
Rule 116   param_list_opt -> param_list
Rule 117   param_list_opt -> empty
Rule 118   param_list -> param_list COMMA param
Rule 119   param_list -> param
Rule 120   param -> IDENTIFIER COLON type
Rule 121   function_body -> program expression
Rule 122   function_body -> expression
Rule 123   function_body -> program_opt
Rule 124   maybe_pub -> IDENTIFIER
Rule 125   maybe_pub -> empty
Rule 126   function_name -> IDENTIFIER
Rule 127   function_name -> MAIN
Rule 128   statement -> maybe_pub FN function_name LPAREN param_list_opt RPAREN ARROW type LBRACE function_body RBRACE
Rule 129   statement -> maybe_pub FN function_name LPAREN param_list_opt RPAREN LBRACE program_opt RBRACE
Rule 130   statement -> RETURN expression SEMICOLON
Rule 131   expression -> IDENTIFIER LPAREN arguments_opt RPAREN

Terminals, with rules where they appear

ARROW                : 29 73 128
AS                   : 56
ASIGNED_TO           : 71 96 107
ASYNC                : 73 74
BIT_AND              : 54 55 88 89
BOOLEAN              : 52 68
CHAR                 : 51
CLOSURE_PIPE         : 28 28 29 29
COLON                : 20 22 94 107 120
COMMA                : 8 9 16 21 22 87 98 110 113 118
CONJUNCTION          : 44 63
CONST                : 107
DISJUNCTION          : 45 64
DIVIDE               : 34
DOT                  : 9 10 13 114
DOUBLE_COLON         : 11
ELSE                 : 70
EQUAL_TO             : 38 57
FLOAT                : 49
FN                   : 73 74 128 129
FOR                  : 115
GREATER_THAN         : 41 60
GREATER_THAN_OR_EQUAL_TO : 43 62
IDENTIFIER           : 9 10 11 11 13 19 20 21 22 53 55 71 91 102 103 104 105 107 115 120 124 126 131
IF                   : 69 70
IN                   : 115
INTEGER              : 48 87 101 103 103 104 104 114
LBRACE               : 24 69 70 70 72 73 74 115 128 129
LBRACKET             : 86 87 100 101 102 103 104 105
LESS_THAN            : 40 59
LESS_THAN_OR_EQUAL_TO : 42 61
LET                  : 91
LPAREN               : 6 7 8 9 10 11 13 30 66 73 74 108 111 128 129 131
MAIN                 : 127
MINUS                : 32 47
MOD                  : 35
MUT                  : 55 89 92
NOT                  : 6 7 8 46 65 105
NOT_EQUAL            : 39 58
PLUS                 : 31
PRINTLN              : 6 7 8
RANGE                : 36 103
RANGE_INCLUSIVE      : 37 104
RBRACE               : 24 69 70 70 72 73 74 115 128 129
RBRACKET             : 86 87 100 101 102 103 104 105
RETURN               : 130
RPAREN               : 6 7 8 9 10 11 13 30 66 73 74 108 111 128 129 131
SEMICOLON            : 6 7 8 12 71 91 101 107 130
STRING               : 6 8 50
TIMES                : 33
TYPE_BOOL            : 84
TYPE_CHAR            : 81
TYPE_F64             : 80
TYPE_I32             : 75
TYPE_STR             : 83
TYPE_STRING          : 82
TYPE_TUPLE           : 85
TYPE_U16             : 77
TYPE_U32             : 78
TYPE_U64             : 79
TYPE_U8              : 76
WHILE                : 72
error                : 

Nonterminals, with rules where they appear

argument_list        : 8 14 16
arguments_opt        : 13 131
closure_block_content : 24
closure_body         : 28 29
closure_params       : 21 22 28 29
condition            : 63 63 64 64 65 66
const_decl           : 106
element_list         : 98 100 105
empty                : 4 15 93 95 97 117 125
expression           : 7 9 9 9 10 10 12 13 16 17 23 25 26 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 47 54 56 57 57 58 58 59 59 60 60 61 61 62 62 67 69 70 71 72 96 98 99 101 102 107 112 113 114 115 121 122 130
function_body        : 73 128
function_name        : 73 74 128 129
let_decl             : 90
maybe_init           : 91
maybe_mut            : 91
maybe_pub            : 128 129
maybe_type           : 91
param                : 118 119
param_list           : 116 118
param_list_opt       : 73 74 128 129
program              : 1 3 26 121 0
program_opt          : 27 69 70 70 72 74 115 123 129
statement            : 1 2
tuple_type_list      : 108 110
tuple_value_list     : 111 113
type                 : 20 22 29 56 73 86 87 88 89 94 107 109 110 120 128

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (6) statement -> . PRINTLN NOT LPAREN STRING RPAREN SEMICOLON
    (7) statement -> . PRINTLN NOT LPAREN expression RPAREN SEMICOLON
    (8) statement -> . PRINTLN NOT LPAREN STRING COMMA argument_list RPAREN SEMICOLON
    (12) statement -> . expression SEMICOLON
    (69) statement -> . IF expression LBRACE program_opt RBRACE
    (70) statement -> . IF expression LBRACE program_opt RBRACE ELSE LBRACE program_opt RBRACE
    (71) statement -> . IDENTIFIER ASIGNED_TO expression SEMICOLON
    (72) statement -> . WHILE expression LBRACE program_opt RBRACE
    (73) statement -> . ASYNC FN function_name LPAREN param_list_opt RPAREN ARROW type LBRACE function_body RBRACE
    (74) statement -> . ASYNC FN function_name LPAREN param_list_opt RPAREN LBRACE program_opt RBRACE
    (90) statement -> . let_decl
    (106) statement -> . const_decl
    (115) statement -> . FOR IDENTIFIER IN expression LBRACE program_opt RBRACE
    (128) statement -> . maybe_pub FN function_name LPAREN param_list_opt RPAREN ARROW type LBRACE function_body RBRACE
    (129) statement -> . maybe_pub FN function_name LPAREN param_list_opt RPAREN LBRACE program_opt RBRACE
    (130) statement -> . RETURN expression SEMICOLON
    (9) expression -> . expression DOT IDENTIFIER LPAREN expression COMMA expression RPAREN
    (10) expression -> . expression DOT IDENTIFIER LPAREN expression RPAREN
    (11) expression -> . IDENTIFIER DOUBLE_COLON IDENTIFIER LPAREN RPAREN
    (13) expression -> . expression DOT IDENTIFIER LPAREN arguments_opt RPAREN
    (28) expression -> . CLOSURE_PIPE closure_params CLOSURE_PIPE closure_body
    (29) expression -> . CLOSURE_PIPE closure_params CLOSURE_PIPE ARROW type closure_body
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression RANGE expression
    (37) expression -> . expression RANGE_INCLUSIVE expression
    (38) expression -> . expression EQUAL_TO expression
    (39) expression -> . expression NOT_EQUAL expression
    (40) expression -> . expression LESS_THAN expression
    (41) expression -> . expression GREATER_THAN expression
    (42) expression -> . expression LESS_THAN_OR_EQUAL_TO expression
    (43) expression -> . expression GREATER_THAN_OR_EQUAL_TO expression
    (44) expression -> . expression CONJUNCTION expression
    (45) expression -> . expression DISJUNCTION expression
    (46) expression -> . NOT expression
    (47) expression -> . MINUS expression
    (48) expression -> . INTEGER
    (49) expression -> . FLOAT
    (50) expression -> . STRING
    (51) expression -> . CHAR
    (52) expression -> . BOOLEAN
    (53) expression -> . IDENTIFIER
    (54) expression -> . BIT_AND expression
    (55) expression -> . BIT_AND MUT IDENTIFIER
    (56) expression -> . expression AS type
    (100) expression -> . LBRACKET element_list RBRACKET
    (101) expression -> . LBRACKET expression SEMICOLON INTEGER RBRACKET
    (102) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (103) expression -> . IDENTIFIER LBRACKET INTEGER RANGE INTEGER RBRACKET
    (104) expression -> . IDENTIFIER LBRACKET INTEGER RANGE_INCLUSIVE INTEGER RBRACKET
    (105) expression -> . IDENTIFIER NOT LBRACKET element_list RBRACKET
    (111) expression -> . LPAREN tuple_value_list RPAREN
    (114) expression -> . expression DOT INTEGER
    (131) expression -> . IDENTIFIER LPAREN arguments_opt RPAREN
    (91) let_decl -> . LET maybe_mut IDENTIFIER maybe_type maybe_init SEMICOLON
    (107) const_decl -> . CONST IDENTIFIER COLON type ASIGNED_TO expression SEMICOLON
    (124) maybe_pub -> . IDENTIFIER
    (125) maybe_pub -> . empty
    (5) empty -> .

    PRINTLN         shift and go to state 3
    IF              shift and go to state 8
    IDENTIFIER      shift and go to state 9
    WHILE           shift and go to state 10
    ASYNC           shift and go to state 11
    FOR             shift and go to state 14
    RETURN          shift and go to state 16
    CLOSURE_PIPE    shift and go to state 17
    LPAREN          shift and go to state 5
    NOT             shift and go to state 4
    MINUS           shift and go to state 18
    INTEGER         shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 6
    CHAR            shift and go to state 21
    BOOLEAN         shift and go to state 22
    BIT_AND         shift and go to state 23
    LBRACKET        shift and go to state 24
    LET             shift and go to state 25
    CONST           shift and go to state 26
    FN              reduce using rule 5 (empty -> .)

    program                        shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 7
    let_decl                       shift and go to state 12
    const_decl                     shift and go to state 13
    maybe_pub                      shift and go to state 15
    empty                          shift and go to state 27

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (6) statement -> . PRINTLN NOT LPAREN STRING RPAREN SEMICOLON
    (7) statement -> . PRINTLN NOT LPAREN expression RPAREN SEMICOLON
    (8) statement -> . PRINTLN NOT LPAREN STRING COMMA argument_list RPAREN SEMICOLON
    (12) statement -> . expression SEMICOLON
    (69) statement -> . IF expression LBRACE program_opt RBRACE
    (70) statement -> . IF expression LBRACE program_opt RBRACE ELSE LBRACE program_opt RBRACE
    (71) statement -> . IDENTIFIER ASIGNED_TO expression SEMICOLON
    (72) statement -> . WHILE expression LBRACE program_opt RBRACE
    (73) statement -> . ASYNC FN function_name LPAREN param_list_opt RPAREN ARROW type LBRACE function_body RBRACE
    (74) statement -> . ASYNC FN function_name LPAREN param_list_opt RPAREN LBRACE program_opt RBRACE
    (90) statement -> . let_decl
    (106) statement -> . const_decl
    (115) statement -> . FOR IDENTIFIER IN expression LBRACE program_opt RBRACE
    (128) statement -> . maybe_pub FN function_name LPAREN param_list_opt RPAREN ARROW type LBRACE function_body RBRACE
    (129) statement -> . maybe_pub FN function_name LPAREN param_list_opt RPAREN LBRACE program_opt RBRACE
    (130) statement -> . RETURN expression SEMICOLON
    (9) expression -> . expression DOT IDENTIFIER LPAREN expression COMMA expression RPAREN
    (10) expression -> . expression DOT IDENTIFIER LPAREN expression RPAREN
    (11) expression -> . IDENTIFIER DOUBLE_COLON IDENTIFIER LPAREN RPAREN
    (13) expression -> . expression DOT IDENTIFIER LPAREN arguments_opt RPAREN
    (28) expression -> . CLOSURE_PIPE closure_params CLOSURE_PIPE closure_body
    (29) expression -> . CLOSURE_PIPE closure_params CLOSURE_PIPE ARROW type closure_body
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression RANGE expression
    (37) expression -> . expression RANGE_INCLUSIVE expression
    (38) expression -> . expression EQUAL_TO expression
    (39) expression -> . expression NOT_EQUAL expression
    (40) expression -> . expression LESS_THAN expression
    (41) expression -> . expression GREATER_THAN expression
    (42) expression -> . expression LESS_THAN_OR_EQUAL_TO expression
    (43) expression -> . expression GREATER_THAN_OR_EQUAL_TO expression
    (44) expression -> . expression CONJUNCTION expression
    (45) expression -> . expression DISJUNCTION expression
    (46) expression -> . NOT expression
    (47) expression -> . MINUS expression
    (48) expression -> . INTEGER
    (49) expression -> . FLOAT
    (50) expression -> . STRING
    (51) expression -> . CHAR
    (52) expression -> . BOOLEAN
    (53) expression -> . IDENTIFIER
    (54) expression -> . BIT_AND expression
    (55) expression -> . BIT_AND MUT IDENTIFIER
    (56) expression -> . expression AS type
    (100) expression -> . LBRACKET element_list RBRACKET
    (101) expression -> . LBRACKET expression SEMICOLON INTEGER RBRACKET
    (102) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (103) expression -> . IDENTIFIER LBRACKET INTEGER RANGE INTEGER RBRACKET
    (104) expression -> . IDENTIFIER LBRACKET INTEGER RANGE_INCLUSIVE INTEGER RBRACKET
    (105) expression -> . IDENTIFIER NOT LBRACKET element_list RBRACKET
    (111) expression -> . LPAREN tuple_value_list RPAREN
    (114) expression -> . expression DOT INTEGER
    (131) expression -> . IDENTIFIER LPAREN arguments_opt RPAREN
    (91) let_decl -> . LET maybe_mut IDENTIFIER maybe_type maybe_init SEMICOLON
    (107) const_decl -> . CONST IDENTIFIER COLON type ASIGNED_TO expression SEMICOLON
    (124) maybe_pub -> . IDENTIFIER
    (125) maybe_pub -> . empty
    (5) empty -> .

    PRINTLN         shift and go to state 3
    IF              shift and go to state 8
    IDENTIFIER      shift and go to state 9
    WHILE           shift and go to state 10
    ASYNC           shift and go to state 11
    FOR             shift and go to state 14
    RETURN          shift and go to state 16
    CLOSURE_PIPE    shift and go to state 17
    LPAREN          shift and go to state 5
    NOT             shift and go to state 4
    MINUS           shift and go to state 18
    INTEGER         shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 6
    CHAR            shift and go to state 21
    BOOLEAN         shift and go to state 22
    BIT_AND         shift and go to state 23
    LBRACKET        shift and go to state 24
    LET             shift and go to state 25
    CONST           shift and go to state 26
    FN              reduce using rule 5 (empty -> .)

    statement                      shift and go to state 28
    expression                     shift and go to state 7
    let_decl                       shift and go to state 12
    const_decl                     shift and go to state 13
    maybe_pub                      shift and go to state 15
    empty                          shift and go to state 27

state 2

    (2) program -> statement .

    PRINTLN         reduce using rule 2 (program -> statement .)
    IF              reduce using rule 2 (program -> statement .)
    IDENTIFIER      reduce using rule 2 (program -> statement .)
    WHILE           reduce using rule 2 (program -> statement .)
    ASYNC           reduce using rule 2 (program -> statement .)
    FOR             reduce using rule 2 (program -> statement .)
    RETURN          reduce using rule 2 (program -> statement .)
    CLOSURE_PIPE    reduce using rule 2 (program -> statement .)
    LPAREN          reduce using rule 2 (program -> statement .)
    NOT             reduce using rule 2 (program -> statement .)
    MINUS           reduce using rule 2 (program -> statement .)
    INTEGER         reduce using rule 2 (program -> statement .)
    FLOAT           reduce using rule 2 (program -> statement .)
    STRING          reduce using rule 2 (program -> statement .)
    CHAR            reduce using rule 2 (program -> statement .)
    BOOLEAN         reduce using rule 2 (program -> statement .)
    BIT_AND         reduce using rule 2 (program -> statement .)
    LBRACKET        reduce using rule 2 (program -> statement .)
    LET             reduce using rule 2 (program -> statement .)
    CONST           reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)
    FN              reduce using rule 2 (program -> statement .)
    RBRACE          reduce using rule 2 (program -> statement .)


state 3

    (6) statement -> PRINTLN . NOT LPAREN STRING RPAREN SEMICOLON
    (7) statement -> PRINTLN . NOT LPAREN expression RPAREN SEMICOLON
    (8) statement -> PRINTLN . NOT LPAREN STRING COMMA argument_list RPAREN SEMICOLON

    NOT             shift and go to state 29


state 4

    (46) expression -> NOT . expression
    (9) expression -> . expression DOT IDENTIFIER LPAREN expression COMMA expression RPAREN
    (10) expression -> . expression DOT IDENTIFIER LPAREN expression RPAREN
    (11) expression -> . IDENTIFIER DOUBLE_COLON IDENTIFIER LPAREN RPAREN
    (13) expression -> . expression DOT IDENTIFIER LPAREN arguments_opt RPAREN
    (28) expression -> . CLOSURE_PIPE closure_params CLOSURE_PIPE closure_body
    (29) expression -> . CLOSURE_PIPE closure_params CLOSURE_PIPE ARROW type closure_body
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression RANGE expression
    (37) expression -> . expression RANGE_INCLUSIVE expression
    (38) expression -> . expression EQUAL_TO expression
    (39) expression -> . expression NOT_EQUAL expression
    (40) expression -> . expression LESS_THAN expression
    (41) expression -> . expression GREATER_THAN expression
    (42) expression -> . expression LESS_THAN_OR_EQUAL_TO expression
    (43) expression -> . expression GREATER_THAN_OR_EQUAL_TO expression
    (44) expression -> . expression CONJUNCTION expression
    (45) expression -> . expression DISJUNCTION expression
    (46) expression -> . NOT expression
    (47) expression -> . MINUS expression
    (48) expression -> . INTEGER
    (49) expression -> . FLOAT
    (50) expression -> . STRING
    (51) expression -> . CHAR
    (52) expression -> . BOOLEAN
    (53) expression -> . IDENTIFIER
    (54) expression -> . BIT_AND expression
    (55) expression -> . BIT_AND MUT IDENTIFIER
    (56) expression -> . expression AS type
    (100) expression -> . LBRACKET element_list RBRACKET
    (101) expression -> . LBRACKET expression SEMICOLON INTEGER RBRACKET
    (102) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (103) expression -> . IDENTIFIER LBRACKET INTEGER RANGE INTEGER RBRACKET
    (104) expression -> . IDENTIFIER LBRACKET INTEGER RANGE_INCLUSIVE INTEGER RBRACKET
    (105) expression -> . IDENTIFIER NOT LBRACKET element_list RBRACKET
    (111) expression -> . LPAREN tuple_value_list RPAREN
    (114) expression -> . expression DOT INTEGER
    (131) expression -> . IDENTIFIER LPAREN arguments_opt RPAREN

    IDENTIFIER      shift and go to state 31
    CLOSURE_PIPE    shift and go to state 17
    LPAREN          shift and go to state 5
    NOT             shift and go to state 4
    MINUS           shift and go to state 18
    INTEGER         shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 6
    CHAR            shift and go to state 21
    BOOLEAN         shift and go to state 22
    BIT_AND         shift and go to state 23
    LBRACKET        shift and go to state 24

    expression                     shift and go to state 30

state 5

    (30) expression -> LPAREN . expression RPAREN
    (111) expression -> LPAREN . tuple_value_list RPAREN
    (9) expression -> . expression DOT IDENTIFIER LPAREN expression COMMA expression RPAREN
    (10) expression -> . expression DOT IDENTIFIER LPAREN expression RPAREN
    (11) expression -> . IDENTIFIER DOUBLE_COLON IDENTIFIER LPAREN RPAREN
    (13) expression -> . expression DOT IDENTIFIER LPAREN arguments_opt RPAREN
    (28) expression -> . CLOSURE_PIPE closure_params CLOSURE_PIPE closure_body
    (29) expression -> . CLOSURE_PIPE closure_params CLOSURE_PIPE ARROW type closure_body
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression MOD expression
    (36) expression -> . expression RANGE expression
    (37) expression -> . expression RANGE_INCLUSIVE expression
    (38) expression -> . expression EQUAL_TO expression
    (39) expression -> . expression NOT_EQUAL expression
    (40) expression -> . expression LESS_THAN expression
    (41) expression -> . expression GREATER_THAN expression
    (42) expression -> . expression LESS_THAN_OR_EQUAL_TO expression
    (43) expression -> . expression GREATER_THAN_OR_EQUAL_TO expression
    (44) expression -> . expression CONJUNCTION expression
    (45) expression -> . expression DISJUNCTION expression
    (46) expression -> . NOT expression
    (47) expression -> . MINUS expression
    (48) expression -> . INTEGER
    (49) expression -> . FLOAT
    (50) expression -> . STRING
    (51) expression -> . CHAR
    (52) expression -> . BOOLEAN
    (53) expression -> . IDENTIFIER
    (54) expression -> . BIT_AND expression
    (55) expression -> . BIT_AND MUT IDENTIFIER
    (56) expression -> . expression AS type
    (100) expression -> . LBRACKET element_list RBRACKET
    (101) expression -> . LBRACKET expression SEMICOLON INTEGER RBRACKET
    (102) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (103) expression -> . IDENTIFIER LBRACKET INTEGER RANGE INTEGER RBRACKET
    (104) expression -> . IDENTIFIER LBRACKET INTEGER RANGE_INCLUSIVE INTEGER RBRACKET
    (105) expression -> . IDENTIFIER NOT LBRACKET element_list RBRACKET
    (111) expression -> . LPAREN tuple_value_list RPAREN
    (114) expression -> . expression DOT INTEGER
    (131) expression -> . IDENTIFIER LPAREN arguments_opt RPAREN
    (112) tuple_value_list -> . expression
    (113) tuple_value_list -> . expression COMMA tuple_value_list

    IDENTIFIER      shift and go to state 31
    CLOSURE_PIPE    shift and go to state 17
    LPAREN          shift and go to state 5
    NOT             shift and go to state 4
    MINUS           shift and go to state 18
    INTEGER         shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 6
    CHAR            shift and go to state 21
    BOOLEAN         shift and go to state 22
    BIT_AND         shift and go to state 23
    LBRACKET        shift and go to state 24

    expression                     shift and go to state 32
    tuple_value_list               shift and go to state 33

state 6

    (50) expression -> STRING .

    SEMICOLON       reduce using rule 50 (expression -> STRING .)
    DOT             reduce using rule 50 (expression -> STRING .)
    PLUS            reduce using rule 50 (expression -> STRING .)
    MINUS           reduce using rule 50 (expression -> STRING .)
    TIMES           reduce using rule 50 (expression -> STRING .)
    DIVIDE          reduce using rule 50 (expression -> STRING .)
    MOD             reduce using rule 50 (expression -> STRING .)
    RANGE           reduce using rule 50 (expression -> STRING .)
    RANGE_INCLUSIVE reduce using rule 50 (expression -> STRING .)
    EQUAL_TO        reduce using rule 50 (expression -> STRING .)
    NOT_EQUAL       reduce using rule 50 (expression -> STRING .)
    LESS_THAN       reduce using rule 50 (expression -> STRING .)
    GREATER_THAN    reduce using rule 50 (expression -> STRING .)
    LESS_THAN_OR_EQUAL_TO reduce using rule 50 (expression -> STRING .)
    GREATER_THAN_OR_EQUAL_TO reduce using rule 50 (expression -> STRING .)
    CONJUNCTION     reduce using rule 50 (expression -> STRING .)
    DISJUNCTION     reduce using rule 50 (expression -> STRING .)
    AS              reduce using rule 50 (expression -> STRING .)
    RPAREN          reduce using rule 50 (expression -> STRING .)
    COMMA           reduce using rule 50 (expression -> STRING .)
    LBRACE          reduce using rule 50 (expression -> STRING .)
    RBRACKET        reduce using rule 50 (expression -> STRING .)
    RBRACE          reduce using rule 50 (expression -> STRING .)


state 7

    (12) statement -> expression . SEMICOLON
    (9) expression -> expression . DOT IDENTIFIER LPAREN expression COMMA expression RPAREN
    (10) expression -> expression . DOT IDENTIFIER LPAREN expression RPAREN
    (13) expression -> expression . DOT IDENTIFIER LPAREN arguments_opt RPAREN
    (31) expression -> expression . PLUS expression
    (32) expression -> expression . MINUS expression
    (33) expression -> expression . TIMES expression
    (34) expression -> expression . DIVIDE expression
    (35) expression -> expression . MOD expression
    (36) expression -> expression . RANGE expression
    (37) expression -> expression . RANGE_INCLUSIVE expression
    (38) expression -> expression . EQUAL_TO expression
    (39) expression -> expression . NOT_EQUAL expression
    (40) expression -> expression . LESS_THAN expression
    (41) expression -> expression . GREATER_THAN expression
    (42) expression -> expression . LESS_THAN_OR_EQUAL_TO expression
    (43) expression -> expression . GREATER_THAN_OR_EQUAL_TO expression
    (44) expression -> expression . CONJUNCTION expression
    (45) expression -> expression . DISJUNCTION expression
    (56) expression -> expression . AS type
    (114) expression -> expression . DOT INTEGER

    SEMICOLON       shift and go to state 34
    DOT             shift and go to state 35
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 39
    MOD             shift and go to state 40
    RANGE           shift and go to state 41
    RANGE_INCLUSIVE shift and go to state 42
    EQUAL_TO        shift and go to state 43
    NOT_EQUAL       shift and go to state 44
    LESS_THAN       shift and go to state 45
    GREATER_THAN    shift and go to state 46
    LESS_THAN_OR_EQUAL_TO shift and go to state 47
    GREATER_THAN_OR_EQUAL_TO shift and go to state 48
    CONJUNCTION     shift and go to state 49
    DISJUNCTION     shift and go to state 50
    AS              shift and go to state 51


state 8
